# web-db-transfer

./: .gitignore  API_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CMS_PLATFORM_IMPLEMENTATION_SUMMARY.md  Dockerfile  FINAL_TEST_REPORT.md  GO_PERFORMANCE_IMPLEMENTATION_SUMMARY.md  README.md  config_var.sh  db_sync.sh  docker-compose.test.yml  docker-compose.yml  precheck.sh  pyproject.toml  run_full_tests.py  setup_dev.py  test_codebase_structure.py  test_imports.py  transfer.sh  verify_cms_support.py
.github/workflows/: comprehensive-tests.yml
.kiro/specs/codebase-checkup-cleanup/: design.md  requirements.md  tasks.md
.kiro/specs/web-database-migration-assistant/: design.md  requirements.md  tasks.md
docs/: QUICK_START.md  README.md  api-reference.md  cms-platforms.md
docs/advanced/: checkup-configuration.md  checkup-troubleshooting.md  faq.md  performance-tuning.md  troubleshooting.md
docs/api/: checkup-api.md  openapi.md
docs/deployment/: README.md
docs/migration-guides/: control-panels.md
docs/user-guide/: advanced-cms-migration.md  api-guide.md  checkup-best-practices.md  checkup-documentation-index.md  checkup-faq.md  checkup-installation.md  checkup-usage-examples.md  cli-guide.md  codebase-checkup-guide.md  getting-started.md
examples/: cms_platform_demo.py  connectivity_validation_demo.py  error_handling_logging_demo.py  performance_comparison_demo.py  validation_demo.py  validation_engine_demo.py
examples/checkup/: README.md  basic-checkup.toml  ci-checkup.toml  development-checkup.toml  legacy-checkup.toml  production-checkup.toml  security-focused-checkup.toml  strict-checkup.toml  team-checkup.toml
examples/checkup/scripts/: demo_advanced_features.py  demo_basic_usage.py  demo_batch_processing.py  demo_ci_integration.py  demo_custom_analyzer.py  demo_integration_workflows.py
examples/checkup/workflows/: Dockerfile.checkup  azure-pipelines.yml  docker-compose.yml  github-actions.yml  gitlab-ci.yml  jenkins-pipeline.groovy  kubernetes-job.yaml  pre-commit-config.yaml
go-engine/: go.mod  go.sum  test_source.txt
go-engine/cmd/migration-engine/: main.go
go-engine/internal/fileops/: checksum.go  checksum_test.go  compress.go  compress_test.go  copy.go  copy_test.go
go-engine/internal/monitoring/: metrics.go  resources.go  resources_test.go
go-engine/internal/network/: concurrent.go  transfer.go  transfer_test.go
migration_assistant/: __init__.py
migration_assistant/api/: __init__.py  auth.py  auth_routes.py  cms_endpoints.py  health.py  main.py
migration_assistant/backup/: __init__.py  manager.py  rollback.py  storage.py  strategies.py  validator.py
migration_assistant/checkup/: __init__.py  backup_manager.py  models.py  orchestrator.py  rollback_manager.py
migration_assistant/checkup/analyzers/: __init__.py  base.py  duplicates.py  imports.py  quality.py  structure.py
migration_assistant/checkup/cleaners/: __init__.py  base.py  files.py  formatter.py  imports.py
migration_assistant/checkup/reporters/: __init__.py  base.py  html.py  json.py  markdown.py
migration_assistant/checkup/validators/: __init__.py  base.py  config.py  corrections.py  coverage.py  docs.py
migration_assistant/cli/: __init__.py  config_collector.py  config_persistence.py  enhanced_preset_manager.py  help_system.py  main.py  preset_manager.py  preset_registry.py  preset_templates.py
migration_assistant/core/: __init__.py  cms_exceptions.py  error_handler.py  exceptions.py
migration_assistant/database/: __init__.py  base.py  config.py  data_validator.py  factory.py  schema_analyzer.py
migration_assistant/models/: __init__.py  config.py  session.py
migration_assistant/monitoring/: __init__.py  cms_metrics.py  performance_monitor.py  progress_tracker.py  report_generator.py
migration_assistant/orchestrator/: __init__.py  maintenance.py  orchestrator.py  scheduler.py
migration_assistant/orchestrators/: cms_migration_orchestrator.py
migration_assistant/performance/: __init__.py  async_pool.py  compression.py  engine.py  fallback.py  hybrid.py  monitoring.py
migration_assistant/security/: __init__.py  credential_manager.py  data_sanitizer.py  encryption.py  scanner.py
migration_assistant/tools/: migration_import.py
migration_assistant/transfer/: __init__.py  base.py  factory.py  integrity.py
migration_assistant/utils/: __init__.py  cms_utils.py  helpers.py  logging.py
migration_assistant/validation/: __init__.py  compatibility.py  connectivity.py  dependency.py  engine.py  permission.py
migration_assistant/validators/: cms_validator.py
scripts/: build-go-binaries.sh  build_hook.py  install-production.sh  migration-assistant.service
tests/: README.md  __init__.py  conftest.py  run_comprehensive_tests.py  test_analysis_workflow_integration.py  test_analysis_workflow_orchestration.py  test_api.py  test_api_auth.py  test_api_integration.py  test_backup_integration.py  test_backup_manager.py  test_checkup_analyzers_comprehensive.py  test_checkup_cleaners_comprehensive.py  test_checkup_cli.py  test_checkup_cli_implementation.py  test_checkup_cli_interactions.py  test_checkup_integration_comprehensive.py  test_checkup_models_comprehensive.py  test_checkup_orchestrator_comprehensive.py  test_checkup_reporters_comprehensive.py  test_checkup_validators_comprehensive.py  test_cleanup_workflow_integration.py  test_cleanup_workflow_orchestration.py  test_cli.py  test_cli_config_collector.py  test_cms_platforms.py  test_code_formatter.py  test_comparison_reporting.py  test_comprehensive_api.py  test_comprehensive_database.py  test_comprehensive_transfer.py  test_comprehensive_validation.py  test_config_persistence.py  test_config_validator.py  test_connectivity_validator.py  test_corrections_engine.py  test_coverage_validator.py  test_data_validator.py  test_database_base.py  test_database_config.py  (+58 more)
tests/fixtures/: Dockerfile.integration  Dockerfile.performance
(+20 files in other folders)
